<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.bos</groupId>
    <artifactId>JavaSkills</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>Legacy</module>
        <module>TDD</module>
        <module>Games</module>
        <module>Codewars</module>
        <module>ComputerIdeeResolver</module>
        <module>AdventOfCode</module>
        <module>Programmr</module>
        <module>edabit</module>
        <module>Onion</module>
    </modules>
</project>